# sopm-mipt

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  nginx.conf  swagger.yaml
.claude/: settings.local.json
.github/workflows/: web.yml
backend/distribution_service/: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  build_and_run.sh  main.cpp
backend/distribution_service/adapters/driven/http/: applications_adapter.cpp  applications_adapter.hpp  distribution_input_adapter.cpp  distribution_input_adapter.hpp  projects_adapter.cpp  projects_adapter.hpp  students_adapter.cpp  students_adapter.hpp
backend/distribution_service/adapters/driving/http_server/: http_server.cpp  http_server.hpp
backend/distribution_service/algorithms/: gale_shapley.cpp  gale_shapley.hpp
backend/distribution_service/config/: distribution_service.json
backend/distribution_service/core/config/: config_manager.cpp  config_manager.hpp
backend/distribution_service/core/domain/: models.hpp
backend/distribution_service/core/logger/: logger.hpp
backend/distribution_service/core/ports/driven/: applications_port.hpp  distribution_input_port.hpp  projects_port.hpp  students_port.hpp
backend/distribution_service/core/ports/driving/: server_port.hpp
backend/distribution_service/core/services/: distribution_service.cpp  distribution_service.hpp
backend/project-service/: Makefile  README.md  SECURITY.md  coverage.out  docker-compose.yml  go.mod  go.sum  nginx.conf  swagger.yaml
backend/project-service/cmd/api/: main.go
backend/project-service/internal/auth/: auth.go
backend/project-service/internal/config/: config.go
backend/project-service/internal/handlers/: application_handler.go  common.go  coordinator_applications_handler.go  coordinator_dashboard_handler.go  coordinator_dashboard_handler_test.go  coordinator_distribution_handler.go  coordinator_grading_handler.go  defense_handler.go  distribution_handler.go  internal_distribution_handler.go  meeting_handler.go  mentor_dashboard_handler.go  mentor_dashboard_handler_test.go  mentor_distribution_handler.go  project_handler.go  project_handler_test.go  sprint_handler.go  sprint_score_handler.go  task_handler.go  team_handler.go  team_report_export_handler.go  team_report_handler.go  template_handler.go  template_handler_test.go  user_handler.go  user_handler_test.go
backend/project-service/migrations/: 001_create_tables.down.sql  001_create_tables.up.sql  002_add_predecessor.down.sql  002_add_predecessor.up.sql  002_seed_data.sql  003_add_team_launched.down.sql  003_add_team_launched.up.sql  004_add_proposal_data.down.sql  004_add_proposal_data.up.sql  005_add_pending_proposal.down.sql  005_add_pending_proposal.up.sql  006_create_defenses.down.sql  006_create_defenses.up.sql  007_extend_sprint_scores_categories.down.sql  007_extend_sprint_scores_categories.up.sql  008_team_members_invariant.down.sql  008_team_members_invariant.up.sql
backend/project-service/seed/: seed_demo.sql
backend/report_service/: Dockerfile  README.md  app.py  build_sprint_report.py  requirements.txt
frontend/prototypes/: admin.html  architecture.md  common.css  common.js  database_changes.md  mentor.html  notifications.md  student.html  student_assigned.html  teamlead.html  teamlead_assigned.html
frontend/web/: .gitignore  .npmrc  .prettierignore  CLAUDE.md  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/web/.husky/: pre-commit
frontend/web/.storybook/: main.ts  preview.ts
frontend/web/docs/: AGENT_PLAYBOOK.md
frontend/web/docs/adr/: 0001-status-naming.md  (+3 more)
frontend/web/e2e/: coordinator.spec.ts  login.spec.ts  mentor-dashboard.spec.ts  notifications.spec.ts  profile.spec.ts  student-catalog.spec.ts  student-dnd.spec.ts  student-project.spec.ts
frontend/web/src/: main.tsx  router.tsx
internal/config/: config.go  config_test.go
internal/database/: database.go
internal/handlers/: application_handler.go  application_handler_test.go  project_handler_test.go
internal/httputil/: request_test.go  response.go
internal/middleware/: cors_test.go  logger.go
internal/models/: application.go  project.go  user.go
internal/repository/: project_repository_test.go  template_repository.go  template_repository_test.go  user_repository.go  user_repository_test.go  util_test.go
internal/validation/: validator.go  validator_test.go
migrations/: 001_create_tables.down.sql  001_create_tables.up.sql  003_create_users_table.up.sql
scripts/: postgres-init-migrations.sh
(+427 files in other folders)
